--- a/ftp-server/ftp-server.csproj
+++ b/ftp-server/ftp-server.csproj
@@ -39,6 +39,9 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon_ftp.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -91,6 +94,18 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon_ftp_active1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon_ftp_active2.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon_ftp_idle.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon_ftp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
